--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Liri-Bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "liri.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/Pharcside/Liri-Bot.git"
   },
-  "keywords": [],
+  "keywords": ["node", "Axios", "Spotify", "Bands in town", "Omdb","moment"],
   "author": "",
   "license": "ISC",
   "bugs": {
