--- a/package.json
+++ b/package.json
@@ -10,11 +10,24 @@
     "type": "git",
     "url": "git+https://github.com/Pharcside/Liri-Bot.git"
   },
-  "keywords": ["node", "Axios", "Spotify", "Bands in town", "Omdb","moment"],
+  "keywords": [
+    "node",
+    "Axios",
+    "Spotify",
+    "Bands in town",
+    "Omdb",
+    "moment"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Pharcside/Liri-Bot/issues"
   },
-  "homepage": "https://github.com/Pharcside/Liri-Bot#readme"
+  "homepage": "https://github.com/Pharcside/Liri-Bot#readme",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
+    "moment": "^2.24.0",
+    "node-spotify-api": "^1.1.1"
+  }
 }
